--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,12 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .step-img {
-  width: 30%;
+  width: 35%;
 }
